--- a/vue/index.html
+++ b/vue/index.html
@@ -10,7 +10,18 @@
 
 <body>
     <div id="app">
+        <p>{{message}}</p>
+        <ol>
+            <li v-for="item in list">{{item}}</li>
+        </ol>
+        <button v-on:click="handleClick">Click</button>
+        <input v-model="message">
+        <p v-if="show">Hello Vue.js!</p>
 
+        <button v-on:click="show=!show">변경하기</button>
+        <transition>
+            <p v-if="show">Hello. Vue.js</p>
+        </transition>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.common.dev.js"></script>
@@ -20,3 +31,4 @@
 </body>
 
 </html>
+
