--- a/vue/index.html
+++ b/vue/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 
 <body>
     <div id="app">
-        <button v-on:click="handleClick">Count up</button>
-        <button v-on:click="show=!show">표시/비표시</button>
-        <span ref="count" v-if="show">0</span>
+        <header v-bind:class="{compact:scrollY>200,test:scrollY<=200}">
+            200px 이상 스크롤 했으면, .compact 클래스 추가.
+        </header>
+        <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque minima a perferendis, consectetur labore nemo! Omnis debitis temporibus voluptates provident velit dolore a, animi, suscipit quas, voluptas asperiores natus <placeat class="Lo">Lorem ipsum dolor sit amet consectetur adipisicing elit. At rerum deserunt minima nostrum totam commodi in accusantium distinctio repudiandae enim voluptatem quis ea, alias, provident tempora placeat iste ad velit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, iusto quos, tempora fuga neque libero porro quis maxime eligendi sed perferendis soluta quas explicabo, sapiente voluptate dignissimos et officia aliquid!</placeat></div>
     </div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.common.dev.js"></script>
