--- a/react/zerocho/반응속도/index.html
+++ b/react/zerocho/반응속도/index.html
@@ -3,16 +3,15 @@
     <meta charset="UTF-8"/>
     <title>로또추첨기</title>
     <style>
-        .ball{
-            display:inline-block;
+        table{
+            border-collapse: collapse;
+        }
+
+        td{
             border:1px solid black;
-            border-radius: 20px;
-            width:40px;
-            height:40px;
-            line-height: 40px;
-            font-size:20px;
+            width:100px;
+            height:100px;
             text-align: center;
-            margin-right:20px;
         }
     </style>
 </head>
